0.7.0 (2016-02-22)
------------------
- All services support HTTP Caching via cachecontrol (#101)
- Country code filtering and unicode support for geocoding (#107, #111)
- Documentation and testing improvements (#106, #108)

0.6.0 (2015-12-17)
------------------
- The Upload API methods `upload` and `stage` take an open file object
  instead of a file path. Client code will need to be updated.
- Add Map Matching API (#91).
- Add Datasets API (#15, #80). This API is currently beta and not publicly
  available.

0.5.0 (2015-12-08)
------------------
- We've vendorized the `polyline` module to work around its out of date `six`
  dependency (#74, #77).
- No more need to pass username arguments to SDK class constructors or methods
  as we now get the username from the provided access token (#81, #85).
- The python usage examples under `docs/` are now tested using doctest.

0.4.0 (2015-11-13)
------------------
- Send a unique User-Agent header with API requests (#66).
- Move profile parameter from Distance service object to request method (#68).

0.3.1 (2015-11-10)
------------------
- New release to fix mispackaged 0.3.0 distributions.

0.3.0 (2015-11-10)
------------------
- Remove CLI to its own project: mapbox/mapbox-cli-py (#53).
- Add Surface API (#35).
- Add Distance API (#23).
- Add Directions API (#22).
- Add Uploads API (#14).

0.2.0 (2015-10-15)
------------------
- This version uses version 5 of the geocoding web API.
- Precision of coordinate and proximity values sent to the web API are limited
  to 5 and 3 decimal places respectively.

0.1.0 (2015-09-09)
------------------
- Initial release with support for Mapbox Geocoding API.