@@ -1,6 +1,6 @@
 [tox]
 envlist = 
-    py27,py34
+    py27,py34,py35
 
 [testenv]
 deps =
