@@ -1,3 +1,8 @@
+Next
+----
+- New feature: use boto Bucket's `upload_file()` to stage files, acquiring
+  benefits of multipart uploading (#116).
+
 0.7.0 (2016-02-22)
 ------------------
 - All services support HTTP Caching via cachecontrol (#101)
